--- a/src/Matchmaking/Matchmaking.csproj
+++ b/src/Matchmaking/Matchmaking.csproj
@@ -9,6 +9,8 @@
     <VersionPrefix>4.0.0</VersionPrefix>
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <OutDir>$(SolutionDir)SubspaceServer\Zone\bin\modules\$(MSBuildProjectName)</OutDir>
+    <FileVersion>4.0.0.1</FileVersion>
+    <AssemblyVersion>4.0.0.1</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
